Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/fields/Buyer_Account__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segment Briefs Tracking (Buyer Account)</relationshipLabel>
    <relationshipName>Segment_Briefs_Tracking_BuyAcc</relationshipName>
    <type>Lookup</type>
</CustomField>