Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/fields/New_Taxonomy_Segment_Vertical__c.field-meta.xml
<CustomField>
    <fullName>New_Taxonomy_Segment_Vertical__c</fullName>
    <formula>Segment_Name__r.New_Taxonomy_Segment__r.Segment_Vertical__c</formula>
    <label>New Taxonomy Segment Vertical</label>
    <type>Text</type>
</CustomField>