Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>