Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Brief Tracking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>