Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/fields/Segment_Error__c.field-meta.xml
<CustomField>
    <fullName>Segment_Error__c</fullName>
    <label>Segment Error</label>
    <length>200</length>
    <type>Text</type>
</CustomField>