Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/fields/Segment_Taxonomy_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Taxonomy_Name__c</fullName>
    <formula>Segment_Name__r.Segment_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Name (Mapped)</label>
    <type>Text</type>
</CustomField>