Sandbox/02-12-2025/force-app/main/default/objects/Segment_Brief_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Segment_Taxonomy_Name__c</columns>
    <columns>Segment_Name_For_Upload__c</columns>
    <columns>Segment_Category__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment_Name_For_Upload__c</field>
        <operation>contains</operation>
        <value>Custom,Combinatory</value>
    </filters>
    <filters>
        <field>Segment_Name_For_Upload__c</field>
        <operation>notContain</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Segment_Taxonomy_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>